--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,8 @@
        ga('send', 'pageview');
     </script>
 
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCepkWd2aD355Hxr-DNpP31bD39qvnrOuw"></script>
+
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -79,12 +81,13 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
-     <script src="http://maps.google.com/maps/api/js?key=AIzaSyCepkWd2aD355Hxr-DNpP31bD39qvnrOuw"></script> 
     <!-- endbower -->
     <!-- endbuild -->
 
