responsive en vistas

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> Equipo SocialH4ck</p>
+        <p class="title-center"><span class="glyphicon glyphicon-heart"></span> Equipo SocialH4ck</p>
       </div>
     </div>
 
